--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "serverless-api-",
   "version": "0.1.0",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.97",
+    "@types/node": "^17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
+    "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-offline": "^8.7.0",
     "serverless-plugin-typescript": "^2.1.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@types/aws-sdk": "^2.7.0"
+    "@aws-sdk/client-dynamodb": "^3.92.0",
+    "@aws-sdk/util-dynamodb": "^3.92.0",
+    "@types/aws-sdk": "^2.7.0",
+    "serverless-dynamodb-local": "^0.2.40",
+    "uuid": "^8.3.2"
   }
 }
