--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/util-dynamodb": "^3.92.0",
     "@types/aws-sdk": "^2.7.0",
     "axios": "^0.27.2",
+    "fluentvalidation-ts": "^2.2.2",
     "serverless-dynamodb-local": "^0.2.40",
     "uuid": "^8.3.2"
   }
