--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "serverless-api-",
   "version": "0.1.0",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.97",
+    "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
+    "jest": "^28.1.0",
     "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-offline": "^8.7.0",
     "serverless-plugin-typescript": "^2.1.2",
+    "ts-jest": "^28.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
