--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@shelf/jest-dynamodb": "^2.2.4",
     "@types/aws-lambda": "^8.10.97",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
